# ninja_assistant

./: .env.prod  Dockerfile  Dockerfile.prod  README.md  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
src/assistant/: admin.py  schemas.py  views.py
src/auth/: schemas.py  views.py
src/auth/services/: jwt_service.py
src/users/: schemas.py  service.py  views.py
